[build-system] # Require setuptool version due to https://github.com/pypa/setuptools/issues/2938
requires = ["setuptools>=61.0.0", "wheel"]

[project]
name = "vampy"
version = "0.2.0"
description = "Automated tools used to prepare, run, and analyze vascular morphologies."
authors = [{ name = "Henrik A. Kjeldsberg", email = "henriakj@simula.no" }]
license = { file = "LICENSE" }
readme = "README.md"
dependencies = [
    'numpy'
]

[project.scripts]
vampy = "vampy.__main__:main"

[project.optional-dependencies]
test = [
    "flake8",
    'mypy',
    "numpy",
    "pytest",
    "pytest-cov",
    "matplotlib"
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--cov=vampy",
    "--cov-report=html",
    "--cov-report=term-missing",
    "-v"
]
testpaths = [
    "tests"
]

[tool.mypy]
ignore_missing_imports = true
# Folders to exclude
exclude = [
    "docs/",
    "build/",
]
# Folder to check with mypy
files = [
    "src",
    "tests"
]
