[build-system] # Require setuptool version due to https://github.com/pypa/setuptools/issues/2938
requires = ["setuptools>=61.0.0", "wheel"]

[project]
name = "vampy"
version = "1.0.2"
description = "Automated and objective tools used to prepare, run, and analyze vascular morphologies."
authors = [{ name = "Henrik A. Kjeldsberg", email = "henriakj@simula.no" }]
license = { file = "LICENSE" }
readme = "README.md"
dependencies = [
    'numpy',
    'matplotlib',
    'cppimport',
    'scipy'
]

[project.scripts]
vampy-mesh = "vampy.automatedPreprocessing.automated_preprocessing:main_meshing"
vampy-hemo = "vampy.automatedPostprocessing.compute_hemodynamic_indices:main_hemo"
vampy-metrics = "vampy.automatedPostprocessing.compute_flow_and_simulation_metrics:main_metrics"
vampy-convert = "vampy.automatedPostprocessing.compute_velocity_and_pressure:main_convert"
vampy-probe = "vampy.automatedPostprocessing.visualize_probes:main_probe"

[project.optional-dependencies]
test = [
    "flake8",
    'mypy',
    "pytest",
    "pytest-cov"
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--cov=./",
    "--cov-report=xml",
    "--cov-report=term-missing",
    "-v"
]
testpaths = [
    "tests"
]

[tool.mypy]
ignore_missing_imports = true
# Folders to exclude
exclude = [
    "docs/",
    "build/",
]
# Folder to check with mypy
files = [
    "src",
    "tests"
]
